tdf#147386 Fix text color in CSV import dialog (dark mode)

If FONTCOLOR is set to Automatic, then check the background color and adjust the font color to Black or White depending whether the background is dark.

Change-Id: I3c277291f8aa3a3e63a050c28c8f17b05f4dbf2e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141177
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>